# timeseries-data-compression

./: CMakeLists.txt  README.md
pidx/: CMakeLists.txt  loadPIDX.h
raw/: CMakeLists.txt  RawMain.cpp  loadRaw.cpp  loadRaw.h
utils/: CMakeLists.txt  helper.h  parseArgs.cpp  parseArgs.h  writeFile.h
vtk/: CMakeLists.txt  VTKMain.cpp  loadVTK.cpp  loadVTK.h
